# Discord-Bots-inactive

./: LICENSE  README.md
Classroom-bot/: bot_utils.py  config.json  keep_alive.py  main.py  pyproject.toml
Classroom-bot/cogs/: listener-cog.py  utility.py
Music-Bot-v2/: run.py
Music-Bot-v2/config/: config.py
Music-Bot-v2/config/cookies/: cookies.txt
Music-Bot-v2/musicbot/: settings.py
Music-Bot-v2/musicbot/commands/: general.py  music.py
PING-BOT/: keep_alive.py  main.py  pyproject.toml
